Added endpoint for deleting lessons